
===========================================================================
Release 1.5.2 - TBD
===========================================================================

Moqui Framework 1.5.2 is a minor new feature and bug fix release.

New Features:

- Various performance improvements based on profiling, this time focusing
  on entity and service level operations

Bug Fixes:

TODO

===========================================================================
Release 1.5.1 - 29 Mar 2015
===========================================================================

Moqui Framework 1.5.1 is a minor new feature and bug fix release.

New features in this release include various enhancements to DataDocument
functionality and the introduction of the search#CountBySource to be used
for analytics and reporting using ElasticSearch as the data store. Note
that as part of these changes the fields of the primary entity of a
DataDocument are in the root map/object of the document instead of in a
map/object names for the primary entity.

There is also new functionality for handling JSON documents in more places
including load/import and write/export of entity data and a generic entity
REST interface following various RESTful best practices. See the rest.xml
screen file for more details (comments there with examples, etc).

New Features:

- Updated Elasticsearch to 1.5.0, Apache Lucene to 4.10.4
- More consistent handling of empty in service, entity, and screen when we
  don't want the Groovy definition of empty (ie don't consider 0 numbers
  or false boolean to be empty)
- Support for CharSequence in various places (context, entity, service,
  screen, etc) to handle not just String but also GString when it doesn't
  get converted and StringBuffer, StringBuilder, etc where convenient
- Improved HTTP response code handling, now uses 401 only for authc/login
  failures, 403 (forbidden) for artifact authz failures, and 429 (too many
  requests) for tarpit failures